--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-<!DOCTYPE html>
 <html lang="en" dir="ltr">
 
 <head>
@@ -10,7 +9,7 @@
   <table cellspacing = "10">
     <tr>
       <td>
-        <img src="drops.jpg" alt="Paka Kince Image" style="width:200px;height:200px"">
+        <img src="images/drops.jpg" alt="Paka Kince Image" style="width:200px;height:200px"">
       </td>
       <td>
         <h1> Paka Kince </h1>
